--- a/developers/index.html
+++ b/developers/index.html
@@ -7,29 +7,27 @@ title: "GeoKey – For Developers"
     {% include nav.html %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-10 col-md-8">
-                <h1>Developers</h1>
-                <p>GeoKey is 100% open source. You can deploy it on your own servers, extend it or build an app on top of the API.</p>
-            </div>
+            <h1>Developers</h1>
+            <p>GeoKey is 100% open source. You can deploy it on your own servers, extend it or build an app on top of the API.</p>
         </div>
     </div>
 </header>
 
 <section class="getting-started">
     <div class="container">
-        <div class="row">
-            <h2 class="col-sm-12"><i class="fa fa-rocket fa-lg"></i> The Basics</h2>
-            <div class="col-sm-4">
+        <div class="row overview">
+            <h2><i class="fa fa-rocket"></i> Getting started</h2>
+            <div class="overview-description">
                 <p>Start here if you want to read about the basics of GeoKey.</p>
             </div>
-            <div class="col-sm-8">
-                <ul class="tutorial-links">
+            <div class="overview-links">
+                <ul>
                     <li>
-                        <h6><a href="/help/what-is-geokey.html">What is Geokey</a></h6>
+                        <h3><a href="/help/what-is-geokey.html">What is Geokey</a></h3>
                         <p>A basic introduction to the features of GeoKey.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/how-does-geokey-work.html">How does GeoKey work</a></h6>
+                        <h3><a href="/help/how-does-geokey-work.html">How does GeoKey work</a></h3>
                         <p>Projects, Categories, data groupings — Learn about the basic concepts of GeoKey.</p>
                     </li>
                 </ul>
@@ -40,23 +38,23 @@ title: "GeoKey – For Developers"
 
 <section>
     <div class="container">
-        <div class="row">
-            <h2 class="col-sm-12"><i class="fa fa-globe fa-lg"></i> Develop an application on top of the Web API</h2>
-            <div class="col-sm-4">
+        <div class="row overview">
+            <h2><i class="fa fa-globe"></i> Develop an application on top of the Web API</h2>
+            <div class="overview-description">
                 <p>Whether you want to build a smart phone app to collect data, visualise your data on a web map or want to build a bridge to your GIS — the Web API provides access to all information you need.</p>
             </div>
-            <div class="col-sm-8">
-                <ul class="tutorial-links">
+            <div class="overview-links">
+                <ul>
                     <li>
-                        <h6><a href="/docs/web-api.html">Read the API docs</a></h6>
+                        <h3><a href="/docs/web-api.html">Read the API docs</a></h3>
                         <p>Find out which API endpoints to use to get information on projects and how to add, read and update contributions.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/register-your-app.html">Register your app</a></h6>
+                        <h3><a href="/help/register-your-app.html">Register your app</a></h3>
                         <p>Before you can use our API you need to register your app.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></h6>
+                        <h3><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></h3>
                         <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
                     </li>
                 </ul>
@@ -67,23 +65,23 @@ title: "GeoKey – For Developers"
 
 <section>
     <div class="container">
-        <div class="row">
-            <h2 class="col-sm-12"><i class="fa fa-cog fa-lg"></i>  Run your own service</h2>
-            <div class="col-sm-4">
+        <div class="row overview">
+            <h2><i class="fa fa-cog"></i>  Run your own service</h2>
+            <div class="overview-description">
                 <p>You want to run your own independent service? Learn how to deploy the code on your system and how to keep the system up to date.</p>
             </div>
-            <div class="col-sm-8">
-                <ul class="tutorial-links">
+            <div class="overview-links">
+                <ul>
                     <li>
-                        <h6><a href="/help/how-to-install.html">How to install</a></h6>
+                        <h3><a href="/help/how-to-install.html">How to install</a></h3>
                         <p>A comprehensive guide to installing GeoKey on a Debian system with Apache and mod_wsgi.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/install-troubleshooting.html">Troubleshooting</a></h6>
+                        <h3><a href="/help/install-troubleshooting.html">Troubleshooting</a></h3>
                         <p>Identify and fix troubles with your installation.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/how-to-update.html">How to update</a></h6>
+                        <h3><a href="/help/how-to-update.html">How to update</a></h3>
                         <p>How to update the system to the latest version</p>
                     </li>
                 </ul>
@@ -94,27 +92,27 @@ title: "GeoKey – For Developers"
 
 <section>
     <div class="container">
-        <div class="row">
-            <h2 class="col-sm-12"><i class="fa fa-plug fa-lg"></i> Extend GeoKey</h2>
-            <div class="col-sm-4">
+        <div class="row overview">
+            <h2><i class="fa fa-plug"></i> Extend GeoKey</h2>
+            <div class="overview-description">
                 <p>Add functionality to GeoKey or create a custom extenstion.</p>
             </div>
-            <div class="col-sm-8">
-                <ul class="tutorial-links">
+            <div class="overview-links">
+                <ul>
                     <li>
-                        <h6><a href="/help/data-model.html">Data model</a></h6>
+                        <h3><a href="/help/data-model.html">Data model</a></h3>
                         <p>Learn about the data model of GeoKey.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/code-structure.html">Platform Code Structure</a></h6>
+                        <h3><a href="/help/code-structure.html">Platform Code Structure</a></h3>
                         <p>Find out where you can find the correct files to change things in the code base.</p>
                     </li>
                     <li>
-                        <h6><a href="/docs/programming-api.html">Explore the programming API.</a></h6>
+                        <h3><a href="/docs/programming-api.html">Explore the programming API.</a></h3>
                         <p>Find out how to use the </p>
                     </li>
                     <li>
-                        <h6><a href="/help/how-to-create-an-extension.html">How to create an extension</a></h6>
+                        <h3><a href="/help/how-to-create-an-extension.html">How to create an extension</a></h3>
                         <p>Learn what you need to do in order to build an extenstion.</p>
                     </li>
                 </ul>
@@ -125,23 +123,23 @@ title: "GeoKey – For Developers"
 
 <section>
     <div class="container">
-        <div class="row">
-            <h2 class="col-sm-12"><i class="fa fa-code-fork fa-lg"></i> Help us to improve GeoKey</h2>
-            <div class="col-sm-4">
+        <div class="row overview">
+            <h2><i class="fa fa-code-fork"></i> Help us to improve GeoKey</h2>
+            <div class="overview-description">
                 <p>GeoKey is open-source. Help us to improve GeoKey by implementing new features or file and fix bugs.</p>
             </div>
-            <div class="col-sm-8">
-                <ul class="tutorial-links">
+            <div class="overview-links">
+                <ul>
                     <li>
-                        <h6><a href="https://github.com/ExCiteS/geokey">Fork the code on Github</a></h6>
+                        <h3><a href="https://github.com/ExCiteS/geokey">Fork the code on Github</a></h3>
                         <p>Help us to fix bugs or build new features.</p>
                     </li>
                     <li>
-                        <h6><a href="https://github.com/ExCiteS/geokey/issues/new">Report a problem</a></h6>
+                        <h3><a href="https://github.com/ExCiteS/geokey/issues/new">Report a problem</a></h3>
                         <p>Something does not work as expected? Are you missing a feature? Let us know — we promise to look into it.</p>
                     </li>
                     <li>
-                        <h6><a href="https://github.com/ExCiteS/geokey-website">Improve the documentation and tutorials</a></h6>
+                        <h3><a href="https://github.com/ExCiteS/geokey-website">Improve the documentation and tutorials</a></h3>
                         <p>This website is a Git repository. Fork it to help us improve GeoKey's documentation.</p>
                     </li>
                 </ul>
