--- a/help/index.html
+++ b/help/index.html
@@ -6,30 +6,28 @@ title: "Help"
 <header  id="header-help">
     {% include nav.html %}
     <div class="container">
-        <h1>Help</h1>
+        <div class="row">
+            <h1>Help</h1>
+        </div>
     </div>
 </header>
 
 <section class="getting-started">
     <div class="container">
-        <div class="row">
-            <h2 class="col-sm-12"><i class="fa fa-rocket fa-lg"></i> The Basics</h2>
-            <div class="col-sm-4">
+        <div class="row overview">
+            <h2><i class="fa fa-rocket"></i> Getting started</h2>
+            <div class="overview-description">
                 <p>Start here if you want to read about the basics of GeoKey.</p>
             </div>
-            <div class="col-sm-8">
-                <ul class="tutorial-links">
+            <div class="overview-links">
+                <ul>
                     <li>
-                        <h6><a href="/help/what-is-geokey.html">What is Geokey</a></h6>
+                        <h3><a href="/help/what-is-geokey.html">What is Geokey</a></h3>
                         <p>A basic introduction to the features of GeoKey.</p>
                     </li>
                     <li>
-                        <h6><a href="/help/how-does-geokey-work.html">How does GeoKey work</a></h6>
+                        <h3><a href="/help/how-does-geokey-work.html">How does GeoKey work</a></h3>
                         <p>Projects, Categories, data groupings — Learn about the basic concepts of GeoKey.</p>
-                    </li>
-                    <li>
-                        <h6><a href="how-to-create-project.html">How to create a new project</a></h6>
-                        <p>Projects are your starting point. Learn how to set up a mapping project for your community.</p>
                     </li>
                 </ul>
             </div>
@@ -39,37 +37,63 @@ title: "Help"
 
 <section class="getting-started">
     <div class="container">
-        <div class="row">
-            <h2 class="col-sm-12"><i class="fa fa-check-circle-o fa-lg"></i> Topics</h2>
-            <div class="col-sm-6">
-                <h3>Managing projects</h3>
-                <ul class="topics">
-                    <li><a href="/help/faq-active-inactive-projects.html">What's the difference between active and archived projects?</a></li>
-                    <li><a href="how-to-setup-categories.html">How to setup categories for data collection</a></li>
-                    <li><a href="how-to-create-field.html">How to create fields for a category</a></li>
-                    <li><a href="category-display-settings.html">Category display settings</a></li>
-                    <li><a href="/help/faq-active-inactive-categories-fields.html">What's the difference between active and inactive categories and fields?</a></li>
-                    <li><a href="field-types.html">Field types</a></li>
-                    <li><a href="add-remove-users.html">Add and remove users to and from user groups</a></li>
-                    <li><a href="granting-permissions-to-usergroups.html">Granting permissions to user groups</a></li>
+        <div class="row overview">
+            <h2><i class="fa fa-university"></i> Guides</h2>
+            <div class="overview-description">
+                <p>Learn the basics of GeoKey by following these guides.</p>
+            </div>
+            <div class="overview-links">
+                <ul>
+                    <li>
+                        <h3><a href="how-to-create-project.html">How to create a new project</a></h3>
+                        <p>Projects are your starting point. Learn how to set up a mapping project for your community.</p>
+                    </li>
+                    <li>
+                        <h3><a href="how-to-setup-categories.html">How to setup categories for data collection</a></h3>
+                        <p>Categories define the types of data you want to collect in your project.</p>
+                    </li>
+                    <li>
+                        <h3><a href="how-to-create-field.html">How to create fields for a category</a></h3>
+                        <p>Each category has a number of field that define what attributes should be provided. </p>
+                    </li>
+                    <li>
+                        <h3><a href="category-display-settings.html">Category display settings</a></h3>
+                        <p>Learn how to change the visual appearance of your data on a map.</p>
+                    </li>
+                    <li>
+                        <h3><a href="add-remove-users.html">Add and remove users to and from user groups</a></h3>
+                        <p>Using user groups you can define who will have access to your project. Learn how to add and remove users to and from a user group.</p>
+                    </li>
+                    <li>
+                        <h3><a href="granting-permissions-to-usergroups.html">Granting permissions to user groups</a></h3>
+                        <p>Using user groups you can define who will have access to your project. Learn how to grant permissions to members of a user group.</p>
+                    </li>
+                    <li>
+                        <h3><a href="/help/how-to-install.html">How to install</a></h3>
+                        <p>GeoKey is free and open source—you can host it from your own servers. Learn how to install GeoKey on Debian or Ubuntu. </p>
+                    </li>
+                    <li>
+                        <h3><a href="/help/how-to-update.html">How to update</a></h3>
+                        <p>Learn how to update a running system on your own servers.</p>
+                    </li>
                 </ul>
             </div>
-            <div class="col-sm-6">
-                <h3>User settings</h3>
-                <ul class="topics">
-                    <li><a href="notification-settings.html">Notification settings</a></li>
-                </ul>
+        </div>
+    </div>
+</section>
 
-                <h3>Running GeoKey</h3>
-                <ul class="topics">
-                    <li><a href="/help/how-to-install.html">How to install</a></li>
-                    <li><a href="/help/how-to-update.html">How to update</a></li>
-                </ul>
-
-                <h3>Develop an app</h3>
-                <ul class="topics">
-                    <li><a href="/help/register-your-app.html">Register your app</a></li>
-                    <li><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></li>
+<section class="getting-started">
+    <div class="container">
+        <div class="row overview">
+            <h2><i class="fa fa-question-circle"></i> Frequently asked questions</h2>
+            <div class="overview-description">
+                <p>Quick answers to popular questions.</p>
+            </div>
+            <div class="overview-links">
+                <ul>
+                    <li><a href="/help/faq-active-inactive-projects.html">What's the difference between active and archived projects?</a></li>
+                    <li><a href="/help/faq-active-inactive-categories-fields.html">What's the difference between active and inactive categories and fields?</a></li>
+                    <li><a href="field-types.html">Field types</a></li>
                 </ul>
             </div>
         </div>
