--- a/index.html
+++ b/index.html
@@ -3,51 +3,76 @@ layout: default
 title: Home
 ---
 
-<header class="main" id="home">
-        {% include nav.html %}
-    <div class="hero container">
-        <h1>Collect, share and discuss local knowledge.</h1>
-        <p>GeoKey is an infrastructure for participatory mapping.</p>
-        <p><a href="/help/what-is-geokey.html" class="btn">Learn more</a></p>
+<header class="home">
+    {% include nav.html %}
+    <div class="container">
+        <div class="row">
+            <h1>Collect, share and discuss local knowledge.</h1>
+            <p>GeoKey provides server-side components to run participatory mapping projects.</p>
+        </div>
     </div>
 </header>
 
-<section id="communities">
-    <div class="container">
-        <div class="row">
-            <h2 class="col-lg-10 col-lg-offset-1 col-sm-12"><span>Communities</span> Collect exactly the data your community needs.</h2>
-            <div class="col-lg-offset-1 col-sm-4">
-                <p>Whether you want to map the history of your neighbourhood, collect data to identify issues that should be fixed by your local government or simply map hidden gems in your area&mdash;GeoKey can help.</p>
-            </div>
-            <div class="col-lg-7 col-sm-8">
-                <ul class="features">
-                    <li><i class="fa fa-cubes fa-fw fa-lg"></i> Setup your data structures</li>
-                    <li><i class="fa fa-users fa-fw fa-lg"></i> Decide who can access, contribute and moderate data</li>
-                    <li><i class="fa fa-camera-retro fa-fw fa-lg"></i> Add photos and videos to your contributions</li>
-                    <li><i class="fa fa-comments-o fa-fw fa-lg"></i> Discuss</li>
-                </ul>
-
-                <p><a href="/collect/" class="btn">Start mapping today</a></p>
+<section id="features">
+    <h2>Features</h2>
+    <div class="row">
+        <div class="feature">
+            <div class="row">
+                <div class="col-sm-2">
+                    <i class="fa fa-cubes fa-fw fa-3x"></i>
+                </div>
+                <div class="col-sm-10">
+                    <h3>Custom data structures</h3>
+                    <p>Collect excactly the data you need in you project. Define categories and fields to define the attributes you want to collect and how your data is validated. </p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
 
-<section id="developers">
-    <div class="container">
-        <div class="row">
-            <h2 class="col-lg-10 col-lg-offset-1 col-sm-12"><span>Developers</span> Build and connect apps to collect, visualise and analyse data.</h2>
-            <div class="col-lg-offset-1 col-sm-4">
-                <p>Use our public API to create your own mobile app to collect data, visualise your data in a GIS or run complex statistical analysis on your data.</p>
+        <div class="feature">
+            <div class="row">
+                <div class="col-sm-2">
+                    <i class="fa fa-users fa-fw fa-3x"></i>
+                </div>
+                <div class="col-sm-10">
+                    <h3>Manage access</h3>
+                    <p>Through user groups, you define who can access, contribute and moderate data. Access can be restricted to selected categories or even contributions that match certain attribute values.</p>
+                </div>
             </div>
-            <div class="col-lg-7 col-sm-8">
-                <ul class="features">
-                    <li><i class="fa fa-code fa-fw fa-lg"></i> Use the REST API to build apps</li>
-                    <li><i class="fa fa-desktop fa-fw fa-lg"></i> Install GeoKey on your server</li>
-                    <li><i class="fa fa-code-fork fa-fw fa-lg"></i> Help us to improve GeoKey</li>
-                </ul>
+        </div>
 
-                <p><a href="/developers/" class="btn">Start coding</a></p>
+        <div class="feature">
+            <div class="row">
+                <div class="col-sm-2">
+                    <i class="fa fa-camera-retro fa-fw fa-3x"></i>
+                </div>
+                <div class="col-sm-10">
+                    <h3>Photos and videos</h3>
+                    <p>Enrich contributions by uploading any number of photos and videos.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feature">
+            <div class="row">
+                <div class="col-sm-2">
+                    <i class="fa fa-comments-o fa-fw fa-3x"></i>
+                </div>
+                <div class="col-sm-10">
+                    <h3>Discussions</h3>
+                    <p>Comments on each contributions allow your community to discuss and work towards consent. </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="feature">
+            <div class="row">
+                <div class="col-sm-2">
+                    <i class="fa fa-refresh fa-fw fa-3x"></i>
+                </div>
+                <div class="col-sm-10">
+                    <h3>API</h3>
+                    <p>Access data via an open REST API that clients for data collection, visualisation and analysis can use to connect to GeoKey and get access to stored data.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -56,11 +81,9 @@ title: Home
 <section id="try-it">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
-                <h2>Give it a go.</h2>
-                <p>We have set up a testing service for GeoKey that you can use to give it a try. You can sign up, create projects and connect to the API. Just don't use it in production, we'll clean the data from time to time.</p>
-                <p><a href="http://play.geokey.org.uk" class="btn"><i class="fa fa-caret-square-o-right"></i> Try GeoKey now</a></p>
-            </div>
+            <h2>Hands on.</h2>
+            <p>We have set up a testing service for GeoKey that you can use to give it a try. You can sign up, create projects and connect to the API. Just don't use it in production, we'll clean the data from time to time.</p>
+            <p><a href="http://play.geokey.org.uk" class="btn"><i class="fa fa-caret-square-o-right"></i> Try GeoKey now</a></p>
         </div>
     </div>
 </section>
@@ -68,11 +91,12 @@ title: Home
 <section id="blog">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
-                <h2><span>From the blog — {{ site.posts.first.date | date_to_long_string }}</span>{{ site.posts.first.title }}</h2>
-                {{ site.posts.first.excerpt }}
-                <p class=btn-group><a href="{{ site.posts.first.url }}" class="no-underline btn"><i class="fa fa-link"></i> Read more</a><a href="blog" class="no-underline btn"><i class="fa fa-archive"></i> Find older entries in the archive</a></p>
-            </div>
+            <h2><span>From the blog — {{ site.posts.first.date | date_to_long_string }}</span>{{ site.posts.first.title }}</h2>
+            {{ site.posts.first.excerpt }}
+            <p class="btn-group">
+                <a href="{{ site.posts.first.url }}" class="btn"><i class="fa fa-link"></i> Read more</a>
+                <a href="blog" class="btn"><i class="fa fa-archive"></i> Find older entries in the archive</a>
+            </p>
         </div>
     </div>
 </section>
@@ -80,11 +104,9 @@ title: Home
 <section id="about">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
-                <h2><span>About GeoKey</span></h2>
-                <p>GeoKey has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was funded by FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>.</p>
-                <p><a href="http://ucl.ac.uk/excites"><img src="build/img/excites-logo.png" width="93" height="100"></a> <a href="http://citizencyberlab.eu/"><img src="build/img/ccl-logo.png" width="198" height="100"></a></p>
-            </div>
+            <h2><span>About GeoKey</span></h2>
+            <p>GeoKey has been developed at <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a> at University College London. The development of the initial version was funded by FP-7 project <a href="http://citizencyberlab.eu/">Citizen Cyberlab</a>.</p>
+            <p><a href="http://ucl.ac.uk/excites"><img src="build/img/excites-logo.png" width="93" height="100"></a> <a href="http://citizencyberlab.eu/"><img src="build/img/ccl-logo.png" width="198" height="100"></a></p>
         </div>
     </div>
 </section>
