--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ title: Home
         <div class="row">
             <h2>Hands on.</h2>
             <p>We have set up a testing service for GeoKey that you can use to give it a try. You can sign up, create projects and connect to the API. Just don't use it in production, we'll clean the data from time to time.</p>
-            <p><a href="http://play.geokey.org.uk" class="btn"><i class="fa fa-caret-square-o-right"></i> Try GeoKey now</a></p>
+            <p><a href="http://play.geokey.org.uk" class="btn btn-primary"><i class="fa fa-caret-square-o-right"></i> Try GeoKey now</a></p>
         </div>
     </div>
 </section>
@@ -94,8 +94,8 @@ title: Home
             <h2><span>From the blog — {{ site.posts.first.date | date_to_long_string }}</span>{{ site.posts.first.title }}</h2>
             {{ site.posts.first.excerpt }}
             <p class="btn-group">
-                <a href="{{ site.posts.first.url }}" class="btn"><i class="fa fa-link"></i> Read more</a>
-                <a href="blog" class="btn"><i class="fa fa-archive"></i> Find older entries in the archive</a>
+                <a href="{{ site.posts.first.url }}" class="btn btn-primary"><i class="fa fa-link"></i> Read more</a>
+                <a href="blog" class="btn btn-primary"><i class="fa fa-archive"></i> Find older entries in the archive</a>
             </p>
         </div>
     </div>
