--- a/help/index.html
+++ b/help/index.html
@@ -45,27 +45,11 @@ title: "Help"
             <div class="overview-links">
                 <ul>
                     <li>
-                        <h3><a href="how-to-create-project.html">How to create a new project</a></h3>
-                        <p>Projects are your starting point. Learn how to set up a mapping project for your community.</p>
+                        <h3><a href="how-to-create-project.html">Setting up a project with GeoKey</a></h3>
+                        <p>This guide walks you through the steps of setting up a new project from scratch, how to create categories and fields and how to use user groups to grant permissions to users.</p>
                     </li>
                     <li>
-                        <h3><a href="how-to-setup-categories.html">How to setup categories for data collection</a></h3>
-                        <p>Categories define the types of data you want to collect in your project.</p>
-                    </li>
-                    <li>
-                        <h3><a href="how-to-create-field.html">How to create fields for a category</a></h3>
-                        <p>Each category has a number of field that define what attributes should be provided. </p>
-                    </li>
-                    <li>
-                        <h3><a href="category-display-settings.html">Category display settings</a></h3>
-                        <p>Learn how to change the visual appearance of your data on a map.</p>
-                    </li>
-                    <li>
-                        <h3><a href="add-remove-users.html">Add and remove users to and from user groups</a></h3>
-                        <p>Using user groups you can define who will have access to your project. Learn how to add and remove users to and from a user group.</p>
-                    </li>
-                    <li>
-                        <h3><a href="granting-permissions-to-usergroups.html">Granting permissions to user groups</a></h3>
+                        <h3><a href="granting-permissions-to-usergroups.html">Granting permissions to users</a></h3>
                         <p>Using user groups you can define who will have access to your project. Learn how to grant permissions to members of a user group.</p>
                     </li>
                     <li>
