Updates to repository code structure docs

--- a/developers/index.html
+++ b/developers/index.html
@@ -104,8 +104,8 @@ title: "GeoKey – For Developers"
                         <p>Learn about the data model of GeoKey.</p>
                     </li>
                     <li>
-                        <h3><a href="/help/code-structure.html">Platform Code Structure</a></h3>
-                        <p>Find out where you can find the correct files to change things in the code base.</p>
+                        <h3><a href="/help/code-structure.html">Repository Structure</a></h3>
+                        <p>Find out where you can find the correct files to change the code base.</p>
                     </li>
                     <li>
                         <h3><a href="/docs/programming-api.html">Explore the programming API.</a></h3>
