Getting started with the API tutorial

--- a/developers/index.html
+++ b/developers/index.html
@@ -57,6 +57,10 @@ title: "GeoKey – For Developers"
                         <h3><a href="/help/getting-started-with-oauth.html">Getting started with OAuth</a></h3>
                         <p>Learn how to obtain OAuth tokens and how to sign your request to authenticate and authorise users.</p>
                     </li>
+                    <li>
+                        <h3><a href="/help/getting-started-with-the-api.html">Getting started with the API</a></h3>
+                        <p>This guide walks you through the first steps of the API.</p>
+                    </li>
                 </ul>
             </div>
         </div>
