Fixes to communities page

--- a/communities/index.html
+++ b/communities/index.html
@@ -24,7 +24,7 @@ title: "GeoKey – Communties"
     <div class="apps">
         <div class="app" id="community-maps">
             <h3>Community Maps</h3>
-            <p>Developed by Mapping for Change, this browser-based application is a sophisticated way to collect and edit data with GeoKey.</p>
+            <p>Developed by Mapping for Change, this browser-based application is a sophisticated way to view, collect and edit data with GeoKey.</p>
             <p><a href="http://new.communitymaps.org.uk/" class="btn btn-primary">Learn more</a></p>
         </div>
         <div class="app" id="epicollect">
@@ -37,7 +37,7 @@ title: "GeoKey – Communties"
             <p>You can build a bespoke client for your use case using the open API.</p>
             <ul>
                 <li><a href="/docs/web-api.html">Read the API docs</a></li>
-                <li><a href="#">Learn how to use the API</a></li>
+                <li><a href="/help/getting-started-with-the-api.html">Learn how to use the API</a></li>
             </ul>
         </div>
     </div>
