New community maps image and link

--- a/communities/index.html
+++ b/communities/index.html
@@ -17,7 +17,8 @@ title: "GeoKey – Communties"
     <div class="container">
         <div class="row">
             <h2>Collect data for GeoKey</h2>
-            <p>Client-side applications integrate with GeoKey and enable your community to collect data.</p>
+            <p>GeoKey, being a data platform, does not come with a front-end to interact with data. </p>
+            <p>There are, however, client-side applications that integrate with GeoKey and enable your community to collect data.</p>
         </div>
     </div>
 
@@ -25,7 +26,7 @@ title: "GeoKey – Communties"
         <div class="app" id="community-maps">
             <h3>Community Maps</h3>
             <p>Developed by Mapping for Change, this browser-based application is a sophisticated way to view, collect and edit data with GeoKey.</p>
-            <p><a href="http://new.communitymaps.org.uk/" class="btn btn-primary">Learn more</a></p>
+            <p><a href="http://communitymaps.org.uk/" class="btn btn-primary">Learn more</a></p>
         </div>
         <div class="app" id="epicollect">
             <h3>EpiCollect+</h3>
