--- a/communities/index.html
+++ b/communities/index.html
@@ -44,11 +44,22 @@ title: "GeoKey – Communties"
     </div>
 </section>
 
-<!-- <section id="use-data">
+<section id="use-data">
     <div class="container">
         <div class="row">
             <h2>Export, analyse and visualise data</h2>
-            <p>Export data using GeoKey's Export extension and import it for further analysis. Here are a few guides to get you started.</p>
+            <p>You can export from GeoKey data for analysis and visualisation in the tools of your choice.</p>
         </div>
     </div>
-</section> -->
+
+    <div class="apps">
+        <div class="app" id="export">
+            <h3>Export data</h3>
+            <p>Use the export extension to export data from your projects to GeoJSON and KML.</p>
+            <ul>
+                <li><a href="/extensions/export-install.html">Install the export extension</a></li>
+                <li><a href="/extensions/export-create.html">How to create an export</a></li>
+            </ul>
+        </div>
+    </div>
+</section>
