--- a/communities/index.html
+++ b/communities/index.html
@@ -61,5 +61,13 @@ title: "GeoKey – Communties"
                 <li><a href="/extensions/export-create.html">How to create an export</a></li>
             </ul>
         </div>
+
+        <div class="app" id="import">
+            <h3>Import exported data into third-party applications</h3>
+            <p>Exported data can be imported into tools for analysis and visualisation. Here are some guides to get you started.</p>
+            <ul>
+                <li><a href="/help/import-qgis.html">Import to QGIS</a></li>
+            </ul>
+        </div>
     </div>
 </section>
