Import CartoDB tutorial

--- a/communities/index.html
+++ b/communities/index.html
@@ -67,6 +67,7 @@ title: "GeoKey – Communties"
             <p>Exported data can be imported into tools for analysis and visualisation. Here are some guides to get you started.</p>
             <ul>
                 <li><a href="/help/import-qgis.html">Import to QGIS</a></li>
+                <li><a href="/help/import-cartodb.html">Import to CartoDB</a></li>
             </ul>
         </div>
     </div>
