Finishing touches to Communities page

--- a/communities/index.html
+++ b/communities/index.html
@@ -35,11 +35,9 @@ title: "GeoKey – Communties"
         </div>
         <div class="app" id="your-app">
             <h3>Build your own app</h3>
-            <p>You can build a bespoke client for your use case using the open API.</p>
-            <ul>
-                <li><a href="/docs/web-api.html">Read the API docs</a></li>
-                <li><a href="/help/getting-started-with-the-api.html">Learn how to use the API</a></li>
-            </ul>
+            <p>GeoKey comes with an open API that you can use to connect bespoke client applications.</p>
+
+            <p><a href="/docs/web-api.html" class="btn btn-primary">Read the API docs</a> <a  class="btn btn-primary" href="/help/getting-started-with-the-api.html">Learn how to use the API</a></p>
         </div>
     </div>
 </section>
@@ -53,22 +51,25 @@ title: "GeoKey – Communties"
     </div>
 
     <div class="apps">
-        <div class="app" id="export">
-            <h3>Export data</h3>
-            <p>Use the export extension to export data from your projects to GeoJSON and KML.</p>
-            <ul>
-                <li><a href="/extensions/export-install.html">Install the export extension</a></li>
-                <li><a href="/extensions/export-create.html">How to create an export</a></li>
-            </ul>
-        </div>
+        <div class="row">
+            <div id="export">
+                <h3>Export data</h3>
+                <p>Use the export extension to export data from your projects to GeoJSON and KML.</p>
+                <ul>
+                    <li><a href="/extensions/export-install.html">Install the export extension</a></li>
+                    <li><a href="/extensions/export-create.html">How to create an export</a></li>
+                </ul>
+            </div>
 
-        <div class="app" id="import">
-            <h3>Import exported data into third-party applications</h3>
-            <p>Exported data can be imported into tools for analysis and visualisation. Here are some guides to get you started.</p>
-            <ul>
-                <li><a href="/help/import-qgis.html">Import to QGIS</a></li>
-                <li><a href="/help/import-cartodb.html">Import to CartoDB</a></li>
-            </ul>
+            <div id="import">
+                <h3>Import exported data into third-party applications</h3>
+                <p>Exported data can be imported into tools for analysis and visualisation. Here are some guides to get you started.</p>
+                <ul>
+                    <li><a href="/help/import-qgis.html">Import to QGIS</a></li>
+                    <li><a href="/help/import-cartodb.html">Import to CartoDB</a></li>
+                </ul>
+            </div>
+
         </div>
     </div>
 </section>
