Sapelli added to communities

--- a/communities/index.html
+++ b/communities/index.html
@@ -28,6 +28,11 @@ title: "GeoKey – Communties"
             <p>Developed by Mapping for Change, this browser-based application is a sophisticated way to view, collect and edit data with GeoKey.</p>
             <p><a href="http://communitymaps.org.uk/" class="btn btn-primary">Learn more</a></p>
         </div>
+        <div class="app" id="sapelli">
+            <h3>Sapelli</h3>
+            <p>The Sapelli platform facilitates data collection across language or literacy barriers through highly configurable icon-driven user interfaces. </p>
+            <p><a href="http://wiki.sapelli.org/index.php/Connect_to_GeoKey" class="btn btn-primary">Learn more</a></p>
+        </div>
         <div class="app" id="epicollect">
             <h3>EpiCollect+</h3>
             <p>The smart phone app is developed at Imperial College London and can be used to collect data on the go.</p>
