--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ title: Home
                 </div>
                 <div class="col-sm-10">
                     <h3>API</h3>
-                    <p>Access data via an open REST API that clients for data collection, visualisation and analysis can use to connect to GeoKey and get access to stored data.</p>
+                    <p>Access data via an open REST API for data collection, visualisation and analysis that clients can use to connect to GeoKey and get access to stored data.</p>
                 </div>
             </div>
         </div>
