--- a/communities/index.html
+++ b/communities/index.html
@@ -31,7 +31,7 @@ title: "GeoKey – Communties"
         <div class="app" id="sapelli">
             <h3>Sapelli</h3>
             <p>The Sapelli platform facilitates data collection across language or literacy barriers through highly configurable icon-driven user interfaces. </p>
-            <p><a href="http://wiki.sapelli.org/index.php/Connect_to_GeoKey" class="btn btn-primary">Learn more</a></p>
+            <p><a href="http://www.sapelli.org/sending-data-to-web-server-geokey/" class="btn btn-primary">Learn more</a></p>
         </div>
         <div class="app" id="epicollect">
             <h3>EpiCollect+</h3>
